--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "element-themex": "^1.0.3",
     "element-ui": "^2.15.6",
     "nuxt": "^2.15.7",
-    "vue-i18n": "^8.26.7"
+    "@nuxtjs/i18n": "^7.2.0"
   },
   "devDependencies": {
     "@nuxtjs/color-mode": "^2.1.1",
