--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@nuxtjs/color-mode": "^2.1.1",
     "@nuxtjs/svg": "^0.3.0",
-    "sass": "^1.43.5"
+    "sass": "^1.43.5",
+    "sass-loader": "10"
   }
 }
